--- a/gymwale/views/gymwale_members.xml
+++ b/gymwale/views/gymwale_members.xml
@@ -9,21 +9,23 @@
                   decoration-info="state=='registered'">
                 <field name="serial_number"/>
                 <field name="name"/>
+                <field name="follow_up" invisible="1"/>
+                <button class="fa fa-comments btn-success" attrs="{'invisible':[('follow_up','=', False)]}"/>
                 <field name="contact" optional="hide"/>
                 <field name="aadhaar_number" optional="hide"/>
                 <field name="prior_health_issue" optional="hide"/>
                 <field name="emergency_contact" optional="hide"/>
                 <field name="emergency_contact_name" optional="hide"/>
-                <field name="membership_plan" optional="show"/>
+                <field name="membership_plan_id" optional="show"/>
                 <field name="amount_to_be_paid" optional="show"/>
                 <field name="membership_assigned" optional="show"/>
                 <field name="membership_expire" optional="show"/>
-                <field name="batch" optional="hide"/>
+                <field name="batch_id" optional="hide"/>
                 <field name="state" widget="badge"
                        decoration-success="state=='paid'"
                        decoration-danger="state=='expire'"
                        decoration-muted="state=='register'"/>
-                <field name="last_cron_execute" optional="hide"/>
+<!--                <field name="last_cron_execute" optional="hide"/>-->
                 <field name="remark" optional="hide"/>
                 <field name="is_whatsapp_member" optional="hide"/>
 <!--                <button name="confirm_payment"-->
@@ -58,9 +60,10 @@
                             confirm="Sure? Want to Print Invoice Receipt!"
                             attrs="{'invisible':[('state','in',('registered','expire'))]}"
                             string="Print Membership Receipt"/>
-                    <button name="generate_routine" type="object"
-                            attrs="{'invisible':[('state','in',('registered','expire'))]}"
-                            string="Generate Routine"/>
+                    <field name="block_reminder" invisible="1"/>
+                    <button name="generate_routine" type="object" class="oe_highlight"
+                            attrs="{'invisible':['|',('state','in',('paid','registered')),('block_reminder','=',True)]}"
+                            string="Reminder"/>
                     <button name="membership_renew" type="object"
                             confirm="Sure? This will Renew Membership!!"
                             class="oe_highlight"
@@ -74,14 +77,17 @@
                     <widget name="web_ribbon" title="Expired"
                             bg_color="bg-danger"
                             attrs="{'invisible':[('state','!=','expire')]}"/>
-                    <field name="image" widget='image' class="oe_avatar"/>
+<!--                    <field name="image" widget='image' class="oe_avatar"/>-->
                     <div class="oe_title">
                         <h1>
                             <field name="serial_number" readonly="1"/>
                         </h1>
-                        <span class="font-weight-bold">
+                        <div class="font-weight-bold">
                             Days Left: <field name="day_counter"/>
-                        </span>
+                        </div>
+<!--                        <div class="font-weight-bold">-->
+<!--                            Refund: <field name="to_be_return"/>-->
+<!--                        </div>-->
                     </div>
                     <group string="Personal Information">
                         <group>
@@ -102,23 +108,27 @@
                     </group>
                     <group string="Membership Details">
                         <group>
-                            <field name="membership_plan" options="{'no_create': True, 'no_edit':True}"/>
-                            <field name="discount"/>
+                            <field name="membership_plan_id"
+                                   options="{'no_create': True, 'no_edit':True}"/>
+                            <field name="discount" attrs="{'readonly':[('state','in',('expire','paid'))]}"/>
                             <field name="amount_to_be_paid" readonly="1" force_save="True"/>
+                            <field name="registration_charges" widget="boolean_toggle" readonly="1"/>
+                            <field name="amount_from_referral"/>
                             <field name="send_email" widget="boolean_toggle"/>
                             <field name="is_whatsapp_member" widget="boolean_toggle"/>
                         </group>
                         <group>
                             <field name="membership_assigned"/>
                             <field name="membership_expire" readonly="1" force_save="True"/>
-                            <field name="batch" options="{'no_create': True, 'no_edit':True}"/>
+                            <field name="batch_id" options="{'no_create': True, 'no_edit':True}"/>
+                             <field name="referral_amount" readonly="1"/>
                             <field name="remark"/>
                             <field name="is_member_joined" widget="boolean_toggle"/>
                         </group>
                     </group>
                     <h3 style="color:#7C7BAD;font-size:1.625rem">Member Measurement</h3>
                     <field name="measurement_ids">
-                        <tree editable="bottom">
+                        <tree editable="top">
                             <field name="measurement_date"/>
                             <field name="height"/>
                             <field name="weight"/>
@@ -130,11 +140,6 @@
                         </tree>
                     </field>
                 </sheet>
-                <div class="oe_chatter">
-                    <field name="message_follower_ids"/>
-                    <field name="activity_ids"/>
-                    <field name="message_ids" options="{'post_refresh': 'recipients'}"/>
-                </div>
             </form>
         </field>
     </record>
@@ -154,10 +159,12 @@
                 <filter name="gender" string="Female Members" domain="[('gender', '=', 'female')]"/>
                 <filter name="active" string="Not Active Members" domain="[('active', '=', False)]"/>
                 <filter name="remark" string="Remark" domain="[('remark', '!=', False)]"/>
+                <filter name="is_whatsapp_member" string="Not Whatsapp Member" domain="[('is_amount_paid', '=', True),
+                ('is_whatsapp_member', '=', False)]"/>
                 <group expand="0" string="Group By">
-                    <filter name="membership_plan" string="Membership Plan" context="{'group_by':'membership_plan'}"/>
+                    <filter name="membership_plan_id" string="Membership Plan" context="{'group_by':'membership_plan_id'}"/>
                     <filter name="state" string="Status" context="{'group_by':'state'}"/>
-                    <filter name="batch" string="Batch" context="{'group_by':'batch'}"/>
+                    <filter name="batch_id" string="Batch" context="{'group_by':'batch_id'}"/>
                     <filter name="active" string="Active" context="{'group_by':'active'}"/>
                 </group>
             </search>
