--- a/gymwale/views/gymwale_expense.xml
+++ b/gymwale/views/gymwale_expense.xml
@@ -27,10 +27,10 @@
                 <sheet>
                     <group>
                         <group>
-                            <field name="bill_from"/>
+                            <field name="bill_from" required="1"/>
                         </group>
                         <group>
-                            <field name="bill_to"/>
+                            <field name="bill_to" required="1"/>
                         </group>
                         <group>
                             <field name="light_bill_amount"/>
